[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console-subscriber = "0.1"
diesel = { version = "2.0.0-rc.0", features = ["sqlite"] }
ethereum-types = "0.13"
futures = "0.3"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.19", features = ["full", "tracing"] }
tokio-serde = { version = "0.8.0" }
tokio-util = { version = "0.7.3", features = ["full"] }
tracing = "0.1"
