[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1

[dependencies]
ethereum-types = "0.13"
env_logger = "0.9"
byteorder = "1.4"
hex = "0.4"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_info"] }
memmap = "0.7"
rayon = "1.5"
rlp = "0.5"
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snap = "1"
